# kelo-motion-control

./: CMakeLists.txt  README.md
include/kelo_motion_control/: EthercatCommunication.h  KELORobotKinematics.h  KeloDriveAPI.h  KeloMotionControl.h  PlatformToWheelSolver.h  SmartWheelKinematics.h  mediator.h
src/: EthercatCommunication.c  EthercatCommunication_old.c  KELORobotKinematics.c  KeloMotionControl.c  PlatformToWheelSolver.c  SmartWheelKinematics.c  mediator.c
test/: EthercatCommunication_old.c  ethercat_and_solver_test.c  ethercat_comm_single_wheel_test.c  ethercat_comm_test.c  freddy_base_test.c  mediator_solver_test.c  mediator_test.c  mediator_test_cpp.cpp  solver_test.c  solver_test_cpp.cpp
